--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -25,7 +25,7 @@
     <tr><td bgcolor='#8CACBB' width=33%><i>Email</i></td><td width=67%>{ email }</td></tr>
 </table><br/><br/>
 
-<table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
+<table ng-if="parentsEnsemble" width=60% style='border: 1px solid #000000' frame='box' rules='all'>
     <tr><td width=33%><i>Nom</i></td><td width=34%><b>Père</b></td><td width=33%><b>Mère</b></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=34%><b>{ namePere }</b></td><td width=33%><b>{ nameMere }</b></td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=34%><b>{ surnamePere }</b></td><td width=33%><b>{ surnameMere }</b></td></tr>
