--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -1,7 +1,9 @@
 <!--mail pour la réservation à l'Étoile de la Mer-->
 <html><body>
-  <h2>Demande de réservation</h2><br/>
-  <h3>1) Identification</h3>
+<div style="text-align:center;">
+  <h3 style="font-style:italic;">Candidature pour le foyer</h3><br/>
+  <h1>{ prenom }<span style="text-transform:uppercase;">{ nom }</span>, { age } ans à ce jour</h1>
+</div>
 <!--<table width="80%">
 <tr>
   <td> 
@@ -12,7 +14,7 @@
  </tr>
 </table>-->
 <br/> 
-
+ 
 
 <table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
