--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -1,8 +1,8 @@
 <!--mail pour la réservation à l'Étoile de la Mer-->
 <html><body>
-<div style="text-align:center;">
-  <h3 style="font-style:italic;">Candidature pour le foyer</h3><br/>
-  <h1>{ prenom }<span style="text-transform:uppercase;">{ nom }</span>, { age } ans à ce jour</h1>
+<div style='text-align:center'>
+  <h3 style='font-style:italic'>Candidature pour le foyer</h3><br/>
+  <h1>{ prenom }<span style='text-transform:uppercase'>{ nom }</span>, { age } ans à ce jour</h1>
 </div>
 <!--<table width="80%">
 <tr>
