--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -2,7 +2,8 @@
 <html><body>
 <div style='text-align:center'>
   <h3 style='font-style:italic'>Candidature pour le foyer</h3><br/>
-  <h1>{ prenom }<span style='text-transform:uppercase'>{ nom }</span>, { age } ans à ce jour</h1>
+  <h1><span style='text-transform:capitalize'></span> <span style='text-transform:uppercase'>{ nom }</span></h1>
+  <h3>{ age } ans (à ce jour)</h3>
 </div>
 <!--<table width="80%">
 <tr>
