--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -2,7 +2,7 @@
 <html><body>
 <div style='text-align:center'>
   <h3 style='font-style:italic'>Candidature pour le foyer</h3><br/>
-  <h1><span style='text-transform:capitalize'></span> <span style='text-transform:uppercase'>{ nom }</span></h1>
+  <h1><span style='text-transform:capitalize'>{ prenom }</span> <span style='text-transform:uppercase'>{ nom }</span></h1>
   <h3>{ age } ans (à ce jour)</h3>
 </div>
 <!--<table width="80%">
@@ -29,19 +29,19 @@
 </table><br/><br/>
 {if parentsEnsemble} 
 <table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
-    <tr><td width=33%><i>Nom</i></td><td width=34%><b>Père</b></td><td width=33%><b>Mère</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=34%><b>{ namePere }</b></td><td width=33%><b>{ nameMere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=34%><b>{ surnamePere }</b></td><td width=33%><b>{ surnameMere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Profession</i></td><td width=34%><b>{ professionPere }</b></td><td width=33%><b>{ professionMere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Nationalité</i></td><td width=34%><b>{ nationalitePere }</b></td><td width=33%><b>{ nationaliteMere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Email</i></td><td width=34%><b>{ emailPere }</b></td><td width=33%><b>{ emailMere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Téléphone portable</i></td><td width=34%><b>{ tel1Pere }</b></td><td width=33%><b>{ tel1Mere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Téléphone professionel</i></td><td width=34%><b>{ tel3Pere }</b></td><td width=33%><b>{ tel3Mere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Adresse</i></td><td width=34%><b>{ addressPere }</b></td><td width=33%><b>{ addressMere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Code Postal</i></td><td width=34%><b>{ cpPere }</b></td><td width=33%><b>{ cpMere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Ville</i></td><td width=34%><b>{ cityPere }</b></td><td width=33%><b>{ cityMere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Pays</i></td><td width=34%><b>{ countryPere }</b></td><td width=33%><b>{ countryMere }</b></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Téléphone fixe</i></td><td width=34%><b>{ tel2Pere }</b></td><td width=33%><b>{ tel2Mere }</b></td></tr>
+    <tr><td width=33%><i></i></td><td width=34%><b>Père</b></td><td width=33%><b>Mère</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=34%>{ namePere }</td><td width=33%>{ nameMere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=34%>{ surnamePere }</td><td width=33%>{ surnameMere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Profession</i></td><td width=34%>{ professionPere }</td><td width=33%>{ professionMere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Nationalité</i></td><td width=34%>{ nationalitePere }</td><td width=33%>{ nationaliteMere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Email</i></td><td width=34%>{ emailPere }</td><td width=33%>{ emailMere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Téléphone portable</i></td><td width=34%>{ tel1Pere }</td><td width=33%>{ tel1Mere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Téléphone professionel</i></td><td width=34%>{ tel3Pere }</td><td width=33%>{ tel3Mere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Adresse</i></td><td width=34%>{ addressPere }</td><td width=33%>{ addressMere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Code Postal</i></td><td width=34%>{ cpPere }</td><td width=33%>{ cpMere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Ville</i></td><td width=34%>{ cityPere }</td><td width=33%>{ cityMere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Pays</i></td><td width=34%>{ countryPere }</td><td width=33%>{ countryMere }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Téléphone fixe</i></td><td width=34%>{ tel2Pere }</td><td width=33%>{ tel2Mere }</td></tr>
 
 </table><br/><br/>
 {endif parentsEnsemble}
