--- a/theme/foyers/templates/blocks/formulaire/infos_individuel.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_individuel.html
@@ -36,8 +36,8 @@
         </div>
         
         <div class="row" >
-            <div class="col-sm-4"><label for="nationality" class="label_style">{{rubedo.translate("Block.Inscription.Nationalite")}}</label></div>
-            <div class="col-sm-8"><input class="form-control" type="text" id="nationality" ng-model="contactCtrl.contactData.nationality" name="nationality"></div>
+            <div class="col-sm-4"><label for="nationality" class="label_style">{{rubedo.translate("Block.Inscription.Nationalite")}} *</label></div>
+            <div class="col-sm-8"><input class="form-control" type="text" id="nationality" ng-model="contactCtrl.contactData.nationality" name="nationality" required></div>
         </div>
         <div class="row" >
             <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
