--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -875,8 +875,8 @@ header.content.prop>div{text-align: center; vertical-align: middle; padding-bott
 //input[type=text], input[type=number],textarea, input[type=email], input[type=text].form-control, input[type=number].form-control,textarea.form-control, input[type=email].form-control {
 //  width:100%; border:3px solid white; background-color: transparent !important; font-family: 'trend_sansone'; font-size: 18px; padding:4px 12px;
 //}
-//input[type=text].ng-dirty.ng-invalid,input[type=number].ng-dirty.ng-invalid,  textarea.ng-dirty.ng-invalid,input[type=email].ng-dirty.ng-invalid{border:3px solid @rouge}
-//input[type=text].ng-invalid:not(.ng-dirty),input[type=number].ng-invalid:not(.ng-dirty),  textarea.ng-invalid:not(.ng-dirty),input[type=email].ng-invalid:not(.ng-dirty){border:3px solid white}
+input[type=text].ng-dirty.ng-invalid,input[type=number].ng-dirty.ng-invalid,  textarea.ng-dirty.ng-invalid,input[type=email].ng-dirty.ng-invalid{border:3px solid @marron}
+input[type=text].ng-invalid:not(.ng-dirty),input[type=number].ng-invalid:not(.ng-dirty),  textarea.ng-invalid:not(.ng-dirty),input[type=email].ng-invalid:not(.ng-dirty){border:3px solid white}
 //.bg-white {
 //  input[type=text].ng-invalid:not(.ng-dirty),input[type=number].ng-invalid:not(.ng-dirty),  textarea.ng-invalid:not(.ng-dirty),input[type=email].ng-invalid:not(.ng-dirty){border:2px solid @marron}
 //  input[type=text]{border-color:@marron}
