--- a/theme/foyers/templates/mails/testProgressif.html
+++ b/theme/foyers/templates/mails/testProgressif.html
@@ -21,8 +21,8 @@
         
         <h2 class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==2}" ng-click="contactCtrl.setCurrentStage(1,infos_familiales.$valid)">{{rubedo.translate("Block.Inscription.InfosFamiliales", "Informations familiales")}}
                                 <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="contactCtrl.currentStage>2"></span>
-                        </h2>
-                        <div id="inscriptionStage2" class="collapse">
+        </h2>
+        <div id="inscriptionStage2" class="collapse">
                             <ng-form name="infos_familiales">
                                     <div  class="row" ng-include="contactCtrl.family_infos"></div>
                                     <!--<div  class="row" ng-include="contactCtrl.freres_soeurs_infos"></div>-->
@@ -31,6 +31,24 @@
                                         <p ng-if="infos_familiales.$invalid && infos_familiales.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
                                     </div>
                             </ng-form>
+        </div>
+        
+        <h2 ng-if="etudiant" class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==3}" ng-click="formCtrl.setCurrentStage(2,infos_travail.$valid)">{{rubedo.translate("Block.Inscription.Infos.Etudes", "Études")}}
+                <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="formCtrl.currentStage>3"></span>
+        </h2>
+        <h2 ng-if="jeunePro" class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==3}" ng-click="formCtrl.setCurrentStage(2,infos_travail.$valid)">{{rubedo.translate("Block.Inscription.Infos.Travail","Situation professionnelle")}}
+                <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="formCtrl.currentStage>3"></span>
+        </h2>
+        
+        <div id="inscriptionStage3" class="collapse">
+            <ng-form name="infos_travail">
+                    <div  class="row" ng-include="formCtrl.travail_infos"></div>
+                    <div  class="row" ng-include="formCtrl.freres_soeurs_infos"></div>
+                    <div class="row text-center">
+                        <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_travail.$invalid}" ng-click="formCtrl.setCurrentStage(3,infos_travail.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
+                        <p ng-if="infos_travail.$invalid && infos_travail.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
+                    </div>
+            </ng-form>
         </div>
         
         
