--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -27,7 +27,7 @@
     <tr><td bgcolor='#8CACBB' width=33%><i>Numéro de téléphone</i></td><td width=67%>{ tel }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Email</i></td><td width=67%>{ email }</td></tr>
 </table><br/><br/>
-{if parentsEnsemble} 
+
 <table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
     <tr><td width=33%><i></i></td><td width=34%><b>Père</b></td><td width=33%><b>Mère</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=34%>{ namePere }</td><td width=33%>{ nameMere }</td></tr>
@@ -42,18 +42,20 @@
     <tr><td bgcolor="#8CACBB" width=33%><i>Code Postal</i></td><td width=34%>{ cpPere }</td><td width=33%>{ cpMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Ville</i></td><td width=34%>{ cityPere }</td><td width=33%>{ cityMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Pays</i></td><td width=34%>{ countryPere }</td><td width=33%>{ countryMere }</td></tr>
-
-
 </table><br/><br/>
-{endif parentsEnsemble}
 
-{{if parentsEnsemble}}
-    <table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
-    <tr><td width=33%><i>Nom</i></td><td width=34%><b>Père</b></td><td width=33%><b>Mère</b></td></tr>
-    </table>
-{{else}}
-    
-{{/if}}
+
+<table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
+  <tr><td bgcolor='#8CACBB' width=100% colspan=4><i>Frères et soeurs</i></td></tr>
+  <tr><td bgcolor='#8CACBB' width=25%><i></i></td><td bgcolor='#8CACBB' width=25%><i>Nom (si différent)</i></td><td bgcolor='#8CACBB' width=25%><i>Prénom</i></td><td bgcolor='#8CACBB' width=25%><i>Age</i></td></tr> 
+  <tr>
+    <td width=25%></td>
+    <td width=25%>{ freres_soeurs[0].nom }</td>
+    <td width=25%>{ freres_soeurs[0].prenom }</td>
+    <td width=25%>{ freres_soeurs[0].age }</td>
+  </tr>
+
+</table><br/>
     
 
 
