--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -29,6 +29,7 @@
 </table><br/><br/>
 
 <table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
+    <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center'><i>Parents</i></td></tr>
     <tr><td width=33%><i></i></td><td width=34%><b>Père</b></td><td width=33%><b>Mère</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=34%>{ namePere }</td><td width=33%>{ nameMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=34%>{ surnamePere }</td><td width=33%>{ surnameMere }</td></tr>
@@ -45,17 +46,7 @@
 </table><br/><br/>
 
 
-<table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
-  <tr><td bgcolor='#8CACBB' width=100% colspan=4><i>Frères et soeurs</i></td></tr>
-  <tr><td bgcolor='#8CACBB' width=25%><i></i></td><td bgcolor='#8CACBB' width=25%><i>Nom (si différent)</i></td><td bgcolor='#8CACBB' width=25%><i>Prénom</i></td><td bgcolor='#8CACBB' width=25%><i>Age</i></td></tr> 
-  <tr>
-    <td width=25%></td>
-    <td width=25%>{ freres_soeurs[1].nom }</td>
-    <td width=25%>{ freres_soeurs[1].prenom }</td>
-    <td width=25%>{ freres_soeurs[1].age }</td>
-  </tr>
 
-</table><br/>
     
 
 
