--- a/theme/foyers/templates/mails/reservationEDM.html
+++ b/theme/foyers/templates/mails/reservationEDM.html
@@ -17,9 +17,9 @@
 <br/> 
  
 
-<table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=67%>{ prenom }</td></tr> 
+<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+<!--    <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=67%>{ nom }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=67%>{ prenom }</td></tr> -->
     <tr><td bgcolor='#8CACBB' width=33%><i>Sexe</i></td><td width=67%>{ sexe }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Date de naissance</i></td><td width=67%>{ birthdate }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Ville de naissance</i></td><td width=67%>{ birthplace }</td></tr>
@@ -30,7 +30,7 @@
 
 <table width=60% style='border: 1px solid #000000' frame='box' rules='all'>
     <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center'><i>Parents</i></td></tr>
-    <tr><td width=33%><i></i></td><td width=34%><b>Père</b></td><td width=33%><b>Mère</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i></i></td><td width=34%><b>Père</b></td><td width=33%><b>Mère</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Nom</i></td><td width=34%>{ namePere }</td><td width=33%>{ nameMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Prénom</i></td><td width=34%>{ surnamePere }</td><td width=33%>{ surnameMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Profession</i></td><td width=34%>{ professionPere }</td><td width=33%>{ professionMere }</td></tr>
@@ -43,6 +43,20 @@
     <tr><td bgcolor="#8CACBB" width=33%><i>Code Postal</i></td><td width=34%>{ cpPere }</td><td width=33%>{ cpMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Ville</i></td><td width=34%>{ cityPere }</td><td width=33%>{ cityMere }</td></tr>
     <tr><td bgcolor="#8CACBB" width=33%><i>Pays</i></td><td width=34%>{ countryPere }</td><td width=33%>{ countryMere }</td></tr>
+</table><br/><br/>
+
+<table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
+    <tr><td bgcolor='#8CACBB' width=100% colspan=3 style='text-align:center'><i>Études</i></td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Études</i></td><td width=67%>{ etudes }</td></tr>
+    <tr><td bgcolor="#8CACBB" width=33%><i>Métier envisagé</i></td><td width=67%>{ metier }</td></tr> 
+    <tr><td bgcolor='#8CACBB' width=33%><i>Diplômes déjà obtenus</i></td><td width=67%>{ diplomes }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Établissement actuel</i></td><td width=67%>{ etablissementActuel }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Établissement fréquenté à la rentrée prochaine</i></td><td width=67%>{ etablissementSuivant }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>L'inscription dépend-elle de résultats préalables?</i></td><td width=67%>{ examensPrealables }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Types d'examens</i></td><td width=67%>{ examensTypes }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Date des résultats</i></td><td width=67%>{ dateResultats }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Date de début d'année scolaire</i></td><td width=67%>{ dateDebutAnnee }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Date de fin d'année scolaire</i></td><td width=67%>{ dateDebutAnnee }</td></tr>
 </table><br/><br/>
 
 
