--- a/theme/foyers/templates/blocks/formulaire/etudes_travail.html
+++ b/theme/foyers/templates/blocks/formulaire/etudes_travail.html
@@ -6,74 +6,7 @@
         <div class="col-sm-4"><label for="metier" class="label_style">{{rubedo.translate("Block.Inscription.MetierEnvisage")}} *</label></div>
         <div class="col-sm-8"><input class="form-control" type="text" id="metier" ng-model="contactCtrl.contactData.metier" name="metier" required></div>
     </div>
-    <div class="row" ng-if="!etudiant && !personneConnue">
-        <div class="col-sm-4"><label for="profession" class="label_style">{{rubedo.translate("Block.Inscription.Profession")}}*</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="profession" ng-model="contactCtrl.contactData.profession" name="profession" required></div>
-    </div>
-    <div class="row" ng-if="!etudiant && !personneConnue">
-        <div class="col-sm-4"><label for="contrat" class="label_style">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat")}}*</label></div>
-        <div class="col-sm-8">
-            <input type="radio"  name="contrat" id="cdi" value="cdi" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="formCtrl.stageouCDD = false;">
-                        <label for="cdi" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.CDI")}}</label>
-            <input type="radio"  name="contrat" id="cdd" value="cdd" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="formCtrl.stageouCDD = true;" required>
-                        <label for="cdd" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.CDD")}}</label>
-            <input type="radio"  name="contrat" id="stage" value="stage" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="formCtrl.stageouCDD = true;">
-                        <label for="stage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Stage")}}</label>
-            <input type="radio"  name="contrat" id="alternance" value="alternance" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="formCtrl.stageouCDD = false;">
-                        <label for="alternance" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Alternance")}}</label>
-            <input type="radio"  name="contrat" id="apprentissage" value="apprentissage" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="formCtrl.stageouCDD = false;">
-                        <label for="apprentissage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Apprentissage")}}</label>
-            <input type="radio"  name="contrat" id="interim" value="interim" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="formCtrl.stageouCDD = false;">
-                        <label for="interim" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Interim")}}</label>
-            <input type="radio"  name="contrat" id="demandeur" value="demandeur" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="formCtrl.stageouCDD = false;">
-                        <label for="demandeur" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Demandeur.Emploi")}}</label>              
-        </div>
-    </div>
-    <div class="row" ng-if="!etudiant && formCtrl.stageouCDD && !personneConnue">
-        <div class="col-sm-4"><label for="dateDebutContrat" class="label_style">{{rubedo.translate("Block.Inscription.Date.Debut.Contrat")}} *</label></div>
-        <div class="col-sm-8">
-            <div class="dropdown">
-                <a showtab class="dropdown-toggle" id="dropdowndateDebutContrat" role="button" data-toggle="dropdown" data-target="#" href="#">
-                    <div class="input-group"><input readonly id="dateDebutContrat" ng-model="contactCtrl.contactData.dateDebutContrat" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                    </div>
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                    <datetimepicker data-ng-model="contactCtrl.contactData.dateDebutContrat"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateDebutContrat', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateDebutContrat = (inscription.dateDebutContrat |date:'dd/MM/yyyy'); moment.locale('fr')"/>
-                </ul> 
-            </div>
-        </div>
-    </div>
     
-    <div class="row" ng-if="!etudiant && formCtrl.stageouCDD && !personneConnue">
-        <div class="col-sm-4"><label for="dateFinContrat" class="label_style">{{rubedo.translate("Block.Inscription.Date.Fin.Contrat")}} *</label></div>
-        <div class="col-sm-8">
-            <div class="dropdown">
-                <a showtab class="dropdown-toggle" id="dropdowndateFinContrat" role="button" data-toggle="dropdown" data-target="#" href="#">
-                    <div class="input-group"><input readonly id="dateFinContrat" ng-model="contactCtrl.contactData.dateFinContrat" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                    </div>
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                    <datetimepicker data-ng-model="contactCtrl.contactData.dateFinContrat"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateFinContrat', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateFinContrat = (inscription.dateFinContrat |date:'dd/MM/yyyy'); moment.locale('fr')"/>
-                </ul> 
-            </div>
-        </div>
-    </div>
-    <div class="row" ng-if="!etudiant && !personneConnue">
-        <div class="col-sm-4"><label for="employeur" class="label_style">{{rubedo.translate("Block.Inscription.Employeur")}} *</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="employeur" ng-model="contactCtrl.contactData.employeur" name="employeur" required></div>
-    </div>
-    <div class="row" ng-if="!etudiant && !personneConnue">
-        <div class="col-sm-4"><label for="adresseEmployeur" class="label_style">{{rubedo.translate("Block.Inscription.Employeur.Adresse")}} *</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" rows="3" id="adresseEmployeur" ng-model="contactCtrl.contactData.adresseEmployeur" name="adresseEmployeur" required></div>
-    </div>
-    <div class="row" ng-if="!etudiant && !personneConnue">
-        <div class="col-sm-4"><label for="telephoneEmployeur" class="label_style">{{rubedo.translate("Block.Inscription.Employeur.Telephone")}} *</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" rows="3" id="telephoneEmployeur" ng-model="contactCtrl.contactData.telephoneEmployeur" name="telephoneEmployeur" required></div>
-    </div>
-    <div class="row" ng-if="!etudiant && !personneConnue">
-        <div class="col-sm-4"><label for="salaire" class="label_style">{{rubedo.translate("Block.Inscription.Salaire")}} *</label></div>
-        <div class="col-sm-8"><input class="form-control" type="number" id="salaire" ng-model="contactCtrl.contactData.salaire" name="salaire" required></div>
-    </div>
     
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="diplomes" class="label_style">{{rubedo.translate("Block.Inscription.Etudes.Diplomes")}}</label></div>
@@ -90,13 +23,13 @@
     <div class="row" ng-if="etudiant && !personneConnue">
         <div class="col-sm-4"><label for="examensPrealables" class="label_style">{{rubedo.translate("Block.Inscription.Examens.Prealables")}} *</label></div>
         <div class="col-sm-8 display_left">
-                <input type="radio"  name="examensPrealables" id="oui" value="oui" ng-model="contactCtrl.contactData.examensPrealables" ng-click="formCtrl.examensPrealables = true;" required>
+                <input type="radio"  name="examensPrealables" id="oui" value="oui" ng-model="contactCtrl.contactData.examensPrealables" ng-click="contactCtrl.examensPrealables = true;" required>
                             <label for="oui" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
-                <input type="radio"  name="examensPrealables" id="non" value="non" ng-model="contactCtrl.contactData.examensPrealables" ng-click="formCtrl.examensPrealables = false;">
+                <input type="radio"  name="examensPrealables" id="non" value="non" ng-model="contactCtrl.contactData.examensPrealables" ng-click="contactCtrl.examensPrealables = false;">
                             <label for="non" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Non")}}</label> 
         </div>
     </div>
-    <div ng-if="formCtrl.examensPrealables && etudiant && !personneConnue"">
+    <div ng-if="contactCtrl.examensPrealables && etudiant && !personneConnue"">
         <div class="row">
             <div class="col-sm-4"><label for="examensTypes" class="label_style">{{rubedo.translate("Block.Inscription.Examens.Types")}}</label></div>
             <div class="col-sm-8"><input class="form-control" type="text" id="examensTypes" ng-model="contactCtrl.contactData.examensTypes" name="examensTypes"></div>
@@ -145,6 +78,77 @@
                 </ul> 
             </div>
         </div>
+    </div>
+    
+    
+    
+    <div class="row" ng-if="!etudiant && !personneConnue">
+        <div class="col-sm-4"><label for="profession" class="label_style">{{rubedo.translate("Block.Inscription.Profession")}}*</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="profession" ng-model="contactCtrl.contactData.profession" name="profession" required></div>
+    </div>
+    <div class="row" ng-if="!etudiant && !personneConnue">
+        <div class="col-sm-4"><label for="contrat" class="label_style">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat")}}*</label></div>
+        <div class="col-sm-8">
+            <input type="radio"  name="contrat" id="cdi" value="cdi" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="contactCtrl.stageouCDD = false;">
+                        <label for="cdi" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.CDI")}}</label>
+            <input type="radio"  name="contrat" id="cdd" value="cdd" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="contactCtrl.stageouCDD = true;" required>
+                        <label for="cdd" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.CDD")}}</label>
+            <input type="radio"  name="contrat" id="stage" value="stage" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="contactCtrl.stageouCDD = true;">
+                        <label for="stage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Stage")}}</label>
+            <input type="radio"  name="contrat" id="alternance" value="alternance" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="contactCtrl.stageouCDD = false;">
+                        <label for="alternance" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Alternance")}}</label>
+            <input type="radio"  name="contrat" id="apprentissage" value="apprentissage" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="contactCtrl.stageouCDD = false;">
+                        <label for="apprentissage" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Apprentissage")}}</label>
+            <input type="radio"  name="contrat" id="interim" value="interim" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="contactCtrl.stageouCDD = false;">
+                        <label for="interim" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Interim")}}</label>
+            <input type="radio"  name="contrat" id="demandeur" value="demandeur" ng-model="contactCtrl.contactData.contrat.contrat" ng-click="contactCtrl.stageouCDD = false;">
+                        <label for="demandeur" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Profession.Type.Contrat.Demandeur.Emploi")}}</label>              
+        </div>
+    </div>
+    <div class="row" ng-if="!etudiant && contactCtrl.stageouCDD && !personneConnue">
+        <div class="col-sm-4"><label for="dateDebutContrat" class="label_style">{{rubedo.translate("Block.Inscription.Date.Debut.Contrat")}} *</label></div>
+        <div class="col-sm-8">
+            <div class="dropdown">
+                <a showtab class="dropdown-toggle" id="dropdowndateDebutContrat" role="button" data-toggle="dropdown" data-target="#" href="#">
+                    <div class="input-group"><input readonly id="dateDebutContrat" ng-model="contactCtrl.contactData.dateDebutContrat" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                    </div>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                    <datetimepicker data-ng-model="contactCtrl.contactData.dateDebutContrat"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateDebutContrat', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateDebutContrat = (inscription.dateDebutContrat |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                </ul> 
+            </div>
+        </div>
+    </div>
+    
+    <div class="row" ng-if="!etudiant && contactCtrl.stageouCDD && !personneConnue">
+        <div class="col-sm-4"><label for="dateFinContrat" class="label_style">{{rubedo.translate("Block.Inscription.Date.Fin.Contrat")}} *</label></div>
+        <div class="col-sm-8">
+            <div class="dropdown">
+                <a showtab class="dropdown-toggle" id="dropdowndateFinContrat" role="button" data-toggle="dropdown" data-target="#" href="#">
+                    <div class="input-group"><input readonly id="dateFinContrat" ng-model="contactCtrl.contactData.dateFinContrat" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                    </div>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                    <datetimepicker data-ng-model="contactCtrl.contactData.dateFinContrat"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateFinContrat', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateFinContrat = (inscription.dateFinContrat |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                </ul> 
+            </div>
+        </div>
+    </div>
+    <div class="row" ng-if="!etudiant && !personneConnue">
+        <div class="col-sm-4"><label for="employeur" class="label_style">{{rubedo.translate("Block.Inscription.Employeur")}} *</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="employeur" ng-model="contactCtrl.contactData.employeur" name="employeur" required></div>
+    </div>
+    <div class="row" ng-if="!etudiant && !personneConnue">
+        <div class="col-sm-4"><label for="adresseEmployeur" class="label_style">{{rubedo.translate("Block.Inscription.Employeur.Adresse")}} *</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" rows="3" id="adresseEmployeur" ng-model="contactCtrl.contactData.adresseEmployeur" name="adresseEmployeur" required></div>
+    </div>
+    <div class="row" ng-if="!etudiant && !personneConnue">
+        <div class="col-sm-4"><label for="telephoneEmployeur" class="label_style">{{rubedo.translate("Block.Inscription.Employeur.Telephone")}} *</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" rows="3" id="telephoneEmployeur" ng-model="contactCtrl.contactData.telephoneEmployeur" name="telephoneEmployeur" required></div>
+    </div>
+    <div class="row" ng-if="!etudiant && !personneConnue">
+        <div class="col-sm-4"><label for="salaire" class="label_style">{{rubedo.translate("Block.Inscription.Salaire")}} *</label></div>
+        <div class="col-sm-8"><input class="form-control" type="number" id="salaire" ng-model="contactCtrl.contactData.salaire" name="salaire" required></div>
     </div>
 
      
