--- a/theme/foyers/templates/mails/reservationJeunePro.html
+++ b/theme/foyers/templates/mails/reservationJeunePro.html
@@ -50,17 +50,16 @@
 </table><br/><br/>
 
 <table width=50% style='border: 1px solid #000000' frame='box' rules='all'>
-    <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>Études</i></td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Études</i></td><td width=67%>{ etudes }</td></tr>
-    <tr><td bgcolor="#8CACBB" width=33%><i>Métier envisagé</i></td><td width=67%>{ metier }</td></tr> 
+    <tr><td bgcolor='#8CACBB' width=100% colspan=2 style='text-align:center;font-size:1.2em;'><i>Situation professionnelle</i></td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Domaine professionnel</i></td><td width=67%>{ profession }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Type de contrat</i></td><td width=67%>{ contrat }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Nom de l'employeur</i></td><td width=67%>{ employeur }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Adresse de l'employeur</i></td><td width=67%>{ adresseEmployeur }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Téléphone de l'employeur</i></td><td width=67%>{ telephoneEmployeur }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Date de début du contrat</i></td><td width=67%>{ dateDebutContrat }</td></tr>
+    <tr><td bgcolor='#8CACBB' width=33%><i>Date de fin du contrat</i></td><td width=67%>{ dateFinContrat }</td></tr>
     <tr><td bgcolor='#8CACBB' width=33%><i>Diplômes déjà obtenus</i></td><td width=67%>{ diplomes }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Établissement actuel</i></td><td width=67%>{ etablissementActuel }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Établissement fréquenté à la rentrée prochaine</i></td><td width=67%>{ etablissementSuivant }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>L'inscription dépend-elle de résultats préalables?</i></td><td width=67%>{ examensPrealables }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Types d'examens</i></td><td width=67%>{ examensTypes }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Date des résultats</i></td><td width=67%>{ dateResultats }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Date de début d'année scolaire</i></td><td width=67%>{ dateDebutAnnee }</td></tr>
-    <tr><td bgcolor='#8CACBB' width=33%><i>Date de fin d'année scolaire</i></td><td width=67%>{ dateDebutAnnee }</td></tr>
+    
 </table><br/><br/>
 
 
